# MixFileExtractor

./: CMakeLists.txt
inc/: Palette.h  ShpLoader.h
src/: MixFileExtractor.cpp  Palette.cpp  ShpLoader.cpp
